Build UI login bug fixing 9

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
                     </span>
                     <div class="Line2"></div>
                 </div>
-                <a href="#" class="Dont-have-an-accoun">
-                    Don’t have an account yet?
-                </a>
+                <div class="Rectangle-7">
+                    <a href="#" class="Dont-have-an-accoun">
+                        Don’t have an account yet?
+                    </a>
+                </div>
                 <div class="Rectangle-6">
                     <a href="#" class="Sign-Up Text-Style">
                         Sign Up
