--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                     by top sector analysts
                     one click away
                 </span>
-                <div class="Rectangle-6">
-                    <a href="#" class="Log-In Text-Style">
+                <a href="#" class="Log-In Text-Style">
+                    <div class="Rectangle-6">
                         Log In
-                    </a>
-                </div>
+                    </div>
+                </a>
                 <div class="Rectangle-5">
                     <div class="Line1"></div>
                     <span class="OR">
@@ -37,16 +37,18 @@
                         Don’t have an account yet?
                     </a>
                 </div>
-                <div class="Rectangle-6">
-                    <a href="#" class="Sign-Up Text-Style">
+                <a href="#" class="Sign-Up Text-Style">
+                    <div class="Rectangle-6">
                         Sign Up
-                    </a>
-                </div>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="Rectangle1">
             <span class="footer">
                 © 2018 Rayft. All rights reserved.
+            </span>
+            <span class="social-icon">  
             </span>
         </div>
     </div>
